--- a/tailwind-css/ex05.html
+++ b/tailwind-css/ex05.html
@@ -26,7 +26,7 @@
 
     <!-- https://tailwindcss.com/docs/list-style-type -->
     <div class="p-5">
-      <ul class="list-decimal">
+      <ul class="list-disc">
         <li>hello world</li>
         <li>hello world</li>
         <li>hello world</li>
