--- a/CSS/ex57.html
+++ b/CSS/ex57.html
@@ -87,6 +87,11 @@
       #footer a:visited {
         color: black;
       }
+      /* 센터 클래스 */
+      .center {
+        display: flex;
+        justify-content: center;
+      }
     </style>
   </head>
   <body>
